lots of updates applied from use in practice, new gulp htmlincluder

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Build folder (build by running 'gulp watch')
 build
 
+# This is ignored since sometimes I develop this npm package using this project
+gulp-htmlincluder
+
 # Dependency directory
 # Deployed apps should consider commenting this line out:
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
