--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+  },
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
-    "gulp-htmlincluder": "^0.1.0",
+    "gulp-htmlincluder": "^1.3.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
-    "pump": "^1.0.2"
-  },
-  "dependencies": {
+    "pump": "^1.0.2",
+    "vinyl-source-stream": "^1.1.0",
     "atomic-scss": "^1.2.12",
-    "lory.js": "^2.3.3",
+    "font-awesome": "^4.7.0",
     "susy": "^2.2.12"
   }
 }
