--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp-htmlincluder": "^1.3.5"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -22,7 +23,6 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
-    "gulp-htmlincluder": "^1.3.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
